Set username and random password on first start.